--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,55 @@
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<!-- Web3 and truffle-contract -->
-<script src="./dist/web3.min.js"></script>
-<script src="./dist/truffle-contract.js"></script>
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<!-- The App script -->
-<script src="js/app.js"></script>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <!-- Web3 and truffle-contract -->
+    <script src="./dist/web3.min.js"></script>
+    <script src="./dist/truffle-contract.js"></script>
+
+    <!-- The App script -->
+    <script src="js/app.js"></script>
+
+    <title>Hello, world!</title>
+</head>
+
+<body>
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h1 class="jumbotron-heading">Valadilene Mayor Election</h1>
+            <p class="lead text-muted">Welcome to the Valadilene DApp demo! use the buttons below to interact with the
+                contract!
+            </p>
+            <p>
+                <button href="#" class="btn btn-primary my-2" onclick="App.init()">Begin</button>
+            </p>
+        </div>
+    </section>
+
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Escrow address:</h5>
+                    <p class="card-text" id="valueId"></p>
+                    <button id="escrows" class="btn btn-primary" disabled="true">Deposit candidate escrows</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Special title treatment</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</body>
